--- a/Assets/_unemployed-project/Scripts/Runtime/UnemployedProject.Runtime.asmdef
+++ b/Assets/_unemployed-project/Scripts/Runtime/UnemployedProject.Runtime.asmdef
@@ -3,9 +3,10 @@
     "rootNamespace": "UnemployedProject.Runtime",
     "references": [
         "GUID:0adde6eebb9343149a035e98ee0d9737",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:9af6f7f1fd0583f43b3fb0ad468de099",
-        ""
+        "GUID:eb696b0a78b5d4c41b00cc3cef6704e2",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
